# settings

./: .gitignore  .vimrc  LICENSE  README.md  environment.sh  install_dbs.sh  install_ubuntu_packages.sh  setup.sh
bash/: autostart.sh  bash_completion  chars.sh  coc.sh  colors.sh  db.sh  docker.sh  download.sh  environment.sh  fix_bash_history.sh  fonts.sh  install.sh  lfm.sh  network.sh  preview.sh  prompt.sh  setup.sh  sys.sh  ubuntu_install_functions.sh  variables.sh  vars.sh  vim.sh  wsl.sh
config/kitty/: kitty.conf
config/wezterm/: wezterm.lua
cs/: CLI.cs  Git.cs  IEnumerableExtensions.cs  PathUtils.cs  Program.cs  cs.csproj
guides/: kitty-on-windows-with-wsl2.md
neovim/: coc-settings.json  init.lua
neovim/lua/: input.lua  plugins.lua  user_commands.lua
prompt/: CMakeLists.txt  Cargo.toml  prompt.cpp
prompt/CMakeModules/: Findlibgit2.cmake
prompt/src/: git.cpp  git.hpp  main.rs  powerline.cpp  powerline.hpp  prompt.cpp
python/: fs.py
rust/: Cargo.toml
rust/src/: main.rs
vim/: ansihighlight.vim  colors.vim  common.vim  filetypes.vim  input.vim  keymap.vim  neovim-only.vim  netrw.vim  vim.md
